<resources>
    <string name="app_name">MyMovies</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="title_activity_register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="btnRegister">Register New Account</string>
    <string name="title_activity_movies_list">Movies List</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_show_movie">ShowMovie</string>
    <string name="search_hint">Enter name of movie</string>

    <string name="apps_name">Slider Menu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <string name="array_adapter">MoviesListAdapter</string>
    <string name="cursor_adapter">MoviesListCursorAdapter</string>


    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_adapter_key">change_adapter</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_header_adapters">Adapters</string>

    <string name="pref_title_choose_adapter">Choose adapter</string>
    <string-array name="pref_adapters_list_titles">
        <item>@string/array_adapter</item>
        <item>@string/cursor_adapter</item>
    </string-array>
    <string-array name="pref_adapters_list_values">
        <item>@string/array_adapter</item>
        <item>@string/cursor_adapter</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_edit_movie">EditMovieActivity</string>

</resources>
