<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tal.mymovies.Register">


    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/title_activity_register"
        android:layout_gravity="center"
        android:paddingBottom="30sp"
        android:textColor="@color/bright_foreground_inverse_material_dark"
        android:textSize="30sp"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/full_name"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/reg_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:background="@color/dim_foreground_disabled_material_dark"
        android:inputType="text"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:background="@color/dim_foreground_disabled_material_dark"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/username"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:background="@color/dim_foreground_disabled_material_dark"
        android:inputType="text"/>

    <TextView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:background="@color/dim_foreground_disabled_material_dark"
        android:inputType="textPassword"/>

    <Button android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/btnRegister"
        android:background="@color/highlighted_text_material_dark"/>

</LinearLayout>
